--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -7,8 +7,8 @@
     <title>{{student.name}} {{student.surname}}</title>
 	{% load staticfiles %}
 
-    <link href="{%static 'css/bootstrap.css'%}" rel="stylesheet">
-    <link href="{%static 'css/style.css'%}" rel="stylesheet">
+    <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
+    <link href={%static 'css/style.css'%} rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,8 +16,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-	<script src="{%static 'js/jquery.min.js'%}"></script>
-    <script src="{%static 'js/bootstrap.min.js'%}"></script>
+	<script src={%static 'js/jquery.min.js'%}></script>
+    <script src={%static 'js/bootstrap.min.js'%}></script>
   </head>
   <body>
 
@@ -38,7 +38,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href={% url 'index'%}>Main</a></li>
-        <li><a href="{% url 'contact'%}">Contacts</a></li>
+        <li><a href={% url 'contact'%}>Contacts</a></li>
 		<li><a href={% url 'students:list_view'%}>Students</a></li>
         <li class="dropdown">
           <a href={% url 'index'%} class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
