--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,8 +7,8 @@
     <title>Contacts</title>
 	{% load staticfiles %}
 
-    <link href="{%static 'css/bootstrap.css'%}" rel="stylesheet">
-    <link href="{%static 'css/style.css'%}" rel="stylesheet">
+    <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
+    <link href={%static 'css/style.css'%} rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,19 +39,19 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{% url 'index'%}">Main</a></li>
-        <li><a href="{% url 'contact'%}">Contacts</a></li>
-		<li><a href="{% url 'students:list_view'%}">Students</a></li>
+        <li><a href={% url 'index'%}>Main</a></li>
+        <li><a href={% url 'contact'%}>Contacts</a></li>
+		<li><a href={% url 'students:list_view'%}>Students</a></li>
         <li class="dropdown">
           <a href="{% url 'contact'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{% url 'contact'%}">Action</a></li>
-            <li><a href="{% url 'contact'%}">Another action</a></li>
-            <li><a href="{% url 'contact'%}">Something else here</a></li>
+            <li><a href={% url 'index'%}>Action</a></li>
+            <li><a href={% url 'index'%}>Another action</a></li>
+            <li><a href={% url 'index'%}>Something else here</a></li>
             
-            <li><a href="{% url 'contact'%}">Separated link</a></li>
+            <li><a href={% url 'index'%}>Separated link</a></li>
            
-            <li><a href="{% url 'contact'%}">One more separated link</a></li>
+            <li><a href={% url 'index'%}>One more separated link</a></li>
           </ul>
         </li>
       </ul>
@@ -62,14 +62,14 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{% url 'contact'%}">Link</a></li>
+        <li><a href={% url 'index'%}>Link</a></li>
         <li class="dropdown">
           <a href="{% url 'contact'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{% url 'contact'%}">Action</a></li>
-            <li><a href="{% url 'contact'%}">Another action</a></li>
-            <li><a href="{% url 'contact'%}">Something else here</a></li>
-            <li><a href="{% url 'contact'%}">Separated link</a></li>
+            <li><a href={% url 'index'%}>Action</a></li>
+            <li><a href={% url 'index'%}>Another action</a></li>
+            <li><a href={% url 'index'%}>Something else here</a></li>
+            <li><a href={% url 'index'%}>Separated link</a></li>
           </ul>
         </li>
       </ul>
@@ -83,7 +83,7 @@
 
        <div class="media">
           <div class="media-left">
-            <a href="{% url 'contact'%}">
+            <a href={% url 'contact'%}>
               <img class="img-circle img-style" src="../static/images/director.jpg">
             </a>
           </div>
@@ -101,7 +101,7 @@
             </div></div>
         <div class="media">
           <div class="media-left">
-            <a href="{% url 'contact'%}">
+            <a href={% url 'contact'%}>
               <img class="img-circle img-style" src="../static/images/founder.jpg">
             </a>	
           </div>
@@ -113,7 +113,7 @@
             Phone:  +99006664646<br>
           </div>
           <div class="media-left">
-            <a href="{% url 'contact'%}">
+            <a href={% url 'contact'%}>
               <img class="img-circle img-style" src="../static/images/manager.jpg">
             </a>
           </div>
