--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -7,8 +7,8 @@
     <title>Student</title>
 	{% load staticfiles %}
 
-    <link href="{%static 'css/bootstrap.css'%}" rel="stylesheet">
-    <link href="{%static 'css/style.css'%}" rel="stylesheet">
+    <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
+    <link href={%static 'css/style.css'%} rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,8 +17,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{%static 'js/jquery.min.js'%}"></script>
-    <script src="{%static 'js/bootstrap.min.js'%}"></script>
+    <script src={%static 'js/jquery.min.js'%}></script>
+    <script src={%static 'js/bootstrap.min.js'%}></script>
   </head>
   <body>
   <nav class="navbar navbar-default">
@@ -31,25 +31,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'student_detail'%}">Brand</a>
+      <a class="navbar-brand" href={% url 'student_detail'%}>Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{% url 'index'%}">Main</a></li>
-        <li> <a href="{% url 'contact'%}">Contacts</a></li>
-		<li><a href="{% url 'student_list' %}">Students</a></li>
+        <li><a href={% url 'index'%}>Main</a></li>
+        <li> <a href={% url 'contact'%}>Contacts</a></li>
+		<li><a href={% url 'student_list' %}>Students</a></li>
         <li class="dropdown">
-          <a href="{% url 'student_detail' %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href={% url 'student_detail' %} class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{% url 'student_detail' %}">Action</a></li>
-            <li><a href="{% url 'student_detail' %}">Another action</a></li>
-            <li><a href="{% url 'student_detail' %}">Something else here</a></li>
+            <li><a href={% url 'student_detail' %}>Action</a></li>
+            <li><a href={% url 'student_detail' %}>Another action</a></li>
+            <li><a href={% url 'student_detail' %}>Something else here</a></li>
             
-            <li><a href="{% url 'student_detail' %}">Separated link</a></li>
+            <li><a href={% url 'student_detail' %}>Separated link</a></li>
             
-            <li><a href="{% url 'student_detail' %}">One more separated link</a></li>
+            <li><a href={% url 'student_detail' %}>One more separated link</a></li>
           </ul>
         </li>
       </ul>
@@ -60,15 +60,15 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{% url 'student_detail' %}">Link</a></li>
+        <li><a href={% url 'student_detail' %}>Link</a></li>
         <li class="dropdown">
-          <a href="{% url 'student_detail' %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href={% url 'student_detail' %} class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{% url 'student_detail' %}">Action</a></li>
-            <li><a href="{% url 'student_detail' %}">Another action</a></li>
-            <li><a href="{% url 'student_detail' %}">Something else here</a></li>
+            <li><a href={% url 'student_detail' %}>Action</a></li>
+            <li><a href={% url 'student_detail' %}>Another action</a></li>
+            <li><a href={% url 'student_detail' %}>Something else here</a></li>
            
-            <li><a href="{% url 'student_detail' %}">Separated link</a></li>
+            <li><a href={% url 'student_detail' %}>Separated link</a></li>
           </ul>
         </li>
       </ul>
