--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -13,18 +13,17 @@
         <ul class="nav nav-pills">
             <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
             <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-            <li role="presentation"class="active"><a href="{% url 'students' %}">Students</a></li>
+            <li role="presentation"class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
         </ul>
     </div>
     <div class="jumbotron">
-
         <h1 class="center">Students list</h1>
     </div>
     <table class="table">
         <caption>Студенты курса</caption>
         <tr>
             <th>#</th>
-            <th>Name, Surname</th>
+            <th>Name Surname</th>
             <th>Address</th>
             <th>Skype</th>
             <th>Courses</th>
@@ -32,12 +31,12 @@
             {% for student in students %}
             <tr>
                 <td> {{ student.id }} </td>
-                <td><a href="students/{{ student.id }}">{{ student.name }}, {{ student.surname }}</a></td>
+                <td><a href="{% url 'students:detail' student.id %}">{{ student.name }} {{ student.surname }}</a></td>
                 <td> {{ student.address }} </td>
                 <td> {{ student.skype }} </td>
                 <td>
                     {% for course in student.courses.all %}
-                        <a href="courses/{{ course.id }}">{{ course.name }}</a>
+                        <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a>
                     {% endfor %}
                 </td>
             </tr>
