KZ 5-1 delete links

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'contact'%}">Brand</a>
+      <a class="navbar-brand">Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,15 +43,15 @@
         <li><a href={% url 'contact'%}>Contacts</a></li>
 		<li><a href={% url 'students:list_view'%}>Students</a></li>
         <li class="dropdown">
-          <a href="{% url 'contact'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href={% url 'index'%}>Action</a></li>
-            <li><a href={% url 'index'%}>Another action</a></li>
-            <li><a href={% url 'index'%}>Something else here</a></li>
+            <li><a>Action</a></li>
+            <li><a>Another action</a></li>
+            <li><a>Something else here</a></li>
             
-            <li><a href={% url 'index'%}>Separated link</a></li>
+            <li><a>Separated link</a></li>
            
-            <li><a href={% url 'index'%}>One more separated link</a></li>
+            <li><a>One more separated link</a></li>
           </ul>
         </li>
       </ul>
@@ -62,14 +62,14 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href={% url 'index'%}>Link</a></li>
+        <li><a>Link</a></li>
         <li class="dropdown">
-          <a href="{% url 'contact'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href={% url 'index'%}>Action</a></li>
-            <li><a href={% url 'index'%}>Another action</a></li>
-            <li><a href={% url 'index'%}>Something else here</a></li>
-            <li><a href={% url 'index'%}>Separated link</a></li>
+            <li><a>Action</a></li>
+            <li><a>Another action</a></li>
+            <li><a>Something else here</a></li>
+            <li><a>Separated link</a></li>
           </ul>
         </li>
       </ul>
@@ -83,7 +83,7 @@
 
        <div class="media">
           <div class="media-left">
-            <a href={% url 'contact'%}>
+            <a>
               <img class="img-circle img-style" src="../static/images/director.jpg">
             </a>
           </div>
@@ -101,7 +101,7 @@
             </div></div>
         <div class="media">
           <div class="media-left">
-            <a href={% url 'contact'%}>
+            <a>
               <img class="img-circle img-style" src="../static/images/founder.jpg">
             </a>	
           </div>
@@ -113,7 +113,7 @@
             Phone:  +99006664646<br>
           </div>
           <div class="media-left">
-            <a href={% url 'contact'%}>
+            <a>
               <img class="img-circle img-style" src="../static/images/manager.jpg">
             </a>
           </div>
