--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -31,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href={% url 'index'%}>Brand</a>
+      <a class="navbar-brand">Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -41,15 +41,15 @@
         <li><a href={% url 'contact'%}>Contacts</a></li>
 		<li><a href={% url 'students:list_view'%}?course_id={{course.id}}>Students</a></li>
         <li class="dropdown">
-          <a href={% url 'index'%} class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href={% url 'index'%}>Action</a></li>
-            <li><a href={% url 'index'%}>Another action</a></li>
-            <li><a href={% url 'index'%}>Something else here</a></li>
+            <li><a>Action</a></li>
+            <li><a>Another action</a></li>
+            <li><a>Something else here</a></li>
            
-            <li><a href={% url 'index'%}>Separated link</a></li>
+            <li><a>Separated link</a></li>
 				
-            <li><a href={% url 'index'%}>One more separated link</a></li>
+            <li><a>One more separated link</a></li>
           </ul>
         </li>
       </ul>
@@ -57,18 +57,17 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href={% url 'index'%}>Link</a></li>
+        <li><a>Link</a></li>
         <li class="dropdown">
-          <a href={% url 'index'%} class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href={% url 'index'%}>Action</a></li>
-            <li><a href={% url 'index'%}>Another action</a></li>
-            <li><a href={% url 'index'%}>Something else here</a></li>
+            <li><a>Action</a></li>
+            <li><a>Another action</a></li>
+            <li><a>Something else here</a></li>
             
-            <li><a href={% url 'index'%}>Separated link</a></li>
+            <li><a>Separated link</a></li>
           </ul>
         </li>
       </ul>
