--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -58,10 +58,45 @@
            <td>{{ lesson.description }}</td>
           </tr>
         {% endfor %}
+        
       </tbody>
     </table>
-  
-   
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Учитель</th>
+          
+        </tr>
+      </thead>
+      <tbody>
+      
+          <tr>
+           <td><a href="{% url 'coaches:detail' course.coach.id %}">{{ course.coach.first_name }} {{ course.coach.last_name }}</a></td>
+           
+           <td>{{ course.coach.description }}</td>
+          </tr>
+        
+        
+       </tbody>
+    </table>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Ассистент</th>
+          
+        </tr>
+      </thead>
+      <tbody>
+      
+          <tr>
+           <td><a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.first_name }} {{ course.assistant.last_name }}</a></td>
+           
+           <td>{{ course.assistant.description }}</td>
+          </tr>
+        
+        
+       </tbody>
+    </table>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
