--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -35,7 +35,6 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    
                     <li><a href="{% url 'index' %}">Main</a></li>
                     <li><a href="{% url 'contact' %}">Contacts</a></li>
                     <li><a href="{% url 'students:list_view' %}?course_id={{courses.id}}">Students</a></li>
@@ -49,46 +48,38 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="well">
-                    <h1>{{ courses }}</h1>
-                    <p>{{ courses.description }}</p>
-                </div>
-                <h2>Преподаватели</h2>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Учитель</h3>
-                    </div>
-                    <div class="panel-body">
-                        <a href="{% url 'coaches:detail' courses.coach.id %}">{{ coaches }}</a>
-                        <p>{{ courses.coach.description }}</p>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Ассистент</h3>
-                    </div>
-                    <div class="panel-body">
-                        <a href="{% url 'coaches:detail' courses.assistant.id %}">{{ assistants }}</a>
-                        <p>{{ courses.assistant.description }}</p>
-                    </div>
-                </div>
-                <h2>Program about {{ courses }}</h2>
+                <h2>{{ coach.full_name }} {{ coach.name }}</h2>
+                <img src="{% static 'images/face.jpg' %}" alt="img">
                 <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>Тема</th>
-                            <th>Описание</th>
-                        </tr>
-                    </thead>
                     <tbody>
-                        {% for lesson in lessons %}
                         <tr>
-                            <td>{{ lesson.order }}</td>
-                            <td>{{ lesson.subject }}</td>
-                            <td>{{ lesson.description }}</td>
+                            <td>Дата рождения</td>
+                            <td>{{ coach.date_of_birth }}</td>
                         </tr>
-                        {% endfor %}
+                        <tr>
+                            <td>адрес</td>
+                            <td>{{ coach.address }}</td>
+                        </tr>
+                        <tr>
+                            <td>почта</td>
+                            <td>{{ coach.user.email }}</td>
+                        </tr>
+                        <tr>
+                            <td>логин skype</td>
+                            <td>{{ coach.skype }}</td>
+                        </tr>
+                        <tr>
+                            <td>телефон</td>
+                            <td>{{ coach.phone }}</td>
+                        </tr>
+                        <tr>
+                            <td>курсы учитель</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>курсы ассистент</td>
+                        </tr>
+                        
                     </tbody>
                 </table>
             </div>
