--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,9 +10,11 @@
     </style>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-    
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -31,15 +33,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img src="../static/images/logo_it.png" width="50" height="50"/>
+      {% load staticfiles %}
+      <img src = {% static 'images/logo_it.png' %} width="50" height="50"/>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">Main</a></li>
-        <li class="active"><a href="contact.html">Contacts</a></li>
-        <li><a href="student_list.html">Students</a></li>
+        <li><a href="{% url 'index' %}">Главная</a></li>
+        <li class="active"><a href="{% url 'contact' %}">Контакты</a></li>
+        <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
