--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,12 @@
     <title>Main of PDBursa</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-    <link href="../templates/contact.html">
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,15 +33,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img src="../static/images/logo_it.png" width="50" height="50"/>
+      {% load staticfiles %}
+      <img src = {% static 'images/logo_it.png' %} width="50" height="50"/>
+      
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Main</a></li>
-        <li><a href="contact.html">Contacts</a></li>
-        <li><a href="student_list.html">Students</a></li>
+        <li class="active"><a href="{% url 'index' %}">Главная</a></li>
+        <li><a href="{% url 'contact' %}">Контакты</a></li>
+        <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
       </ul>
       
     </div><!-- /.navbar-collapse -->
@@ -46,21 +51,25 @@
   </nav>
 <div class="container">
   <div class="jumbotron">
-    <h1> PDBursa for you </h1>
-    <h2> Description </h2>
-    <p class="dline">В этом курсе мы сместили акцент в сторону практики.</p>
-    <p class="dline">Будет умеренное количество теории - максимум практики.</p>
-      <p class="dline">
-        Примерное соотношение теории и практики: 30% на 70%
-      </p>
-      <p class="dline">
-        Курсы будут проходить с 19 октября по 28 декабря.
-      </p>
-      <p class="dline">
-        Практические занятия в аудитории + онлайн лекции.
-      </p>
+    <h1> Ourcourses for you </h1>
+    <p class="dline">Хочешь начать карьеру программиста? У нас ты получишь гаранторованное качество обучения, максимум практики, жесткую систему домашних заданий</p>
+    </p>
       </div>
-</div> 
+</div>
+  <h3> Выбирай курс, с которого предпочитаешь начать обучение, и вперед! </h3>
+  
+  <table>
+  <tr>
+    <th>Курс</th>
+    <th>Краткое описание</th>
+  </tr>
+  {% for course in courses %}
+   <tr><td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td><td>{{ course.short_description }}</td></tr>  
+  {% endfor %}
+  </table>
+  </div> 
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+ <!--  
 <div class="container">
   <div class="jumbotron">
     <h2> Program </h2>
@@ -79,10 +88,7 @@
     <h3 class="bold"> Занятие 7 </h3>
     <p class="dline_1">Django first steps: почему django? введение и описание фреймворка, старт проекта, команды manage.py, django.contrib, авторизация, django.contrib.auth, админка, статика</p>
     </div>
-  </div> 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
+  </div> -->
+    
   </body>
 </html>
