--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -48,7 +48,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2>{{ coach.full_name }} {{ coach.name }}</h2>
+                <h2>{{ coach.user.first_name }} {{ coach.user.last_name }}</h2>
                 <img src="{% static 'images/face.jpg' %}" alt="img">
                 <table class="table table-striped table-hover">
                     <tbody>
