--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,18 +1,17 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>PyBursa - Students</title>
+    <title>Академия Щ.И.Т - Список Студентов</title>
 
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link rel="icon" href="{% static 'images/favicon.ico'%}" type="image/ico">
+    <link rel="icon" href="{% static 'images/favicon.jpg'%}" type="image/jpg">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,7 +25,7 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <img id="brico" alt="Brand" src="../static/images/bicon.png"/>     
+          <img id="brico" alt="Brand" src="../static/images/bricon.png"/>    
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
