--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -41,9 +41,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Главная</a></li>
+            <li><a href="{% url 'index' %}">Главная</a></li>
             <li><a href="{% url 'contact' %}">Контакты</a></li>
-            <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
+            <li class="active"><a href="{% url 'students:list_view' %}">Студенты</a></li>
             <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
           </ul>
         </div>
@@ -53,45 +53,51 @@
     <!-- Begin page content -->
     <div class="container">
       <div class="page-header">
-        <h1>Технополис</h1>
+        <h1>Список студентов</h1>
       </div>
-      <p class="text-justify">Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
-        Широкий спектр тем — от базовых, таких как алгоритмы и структуры данных, до тонкостей разработки приложений для мобильных платформ.
-      Такие проекты, как Technopolis, важны и для рынка в целом, и в первую очередь — для самих студентов. У молодых специалистов должна быть возможность общаться с экспертами отрасли, пробовать свои силы в реальных проектах, иметь перед глазами вдохновляющие примеры. Мы стремимся создавать площадки для этого: проводим конференции для it-разработчиков, организуем крупнейшую в стране олимпиаду для программистов Technopolis Cup и другие международные чемпионаты.</p>
-      <br>
-      <h2>Самые популярные курсы</h2>
-      <br>
       <div class="table-responsive">
-        <table class="table table-bordered table-condensed">
+        <table class="table table-hover table-bordered">
           <thead>
             <tr>
-              <th class="text-center">Курс</th>
-              <th class="text-center">Описание</th>
+              <th>#</th>
+              <th>Фамилия/Имя</th>
+              <th>Адрес</th>
+              <th>Skype</th>
+              <th>Курсы</th>
             </tr>
           </thead>
           <tbody>
-            {% for course in courses %}
-              <tr>
-                <td class="text-left"><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
-                <td>{{ course.short_description }}</td>
+            {% if students_list %}
+              {% for student in students_list %}
                 <tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <br>
-        <footer class="footer">
-          <div class="container">
-            <p class="text-muted">san '2015. All rights reserved.</p>
-          </div>
-        </footer>
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="{% static 'js/jquery.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.js' %}"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
-      </body>
-    </html>
+                  <td>{{ student.id }} </td>
+                  <td><a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name }}</a></td>
+                  <td>{{ student.address }}</td>
+                  <td>{{ student.skype }}</td>
+                  <td>
+                    {% for course in student.courses.all %}
+                      <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
+                    {% endfor %}
+                  </td>
+                </tr>
+              {% endfor %}
+            {% endif %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <br>
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">san '2015. All rights reserved.</p>
+      </div>
+    </footer>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+  </body>
+</html>
