--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,7 +32,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/logo.jpg" alt="img" %}"></a>
+            <a class="navbar-brand" href="{% url 'index' %}">Main</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -40,7 +40,7 @@
                 <li><a href="{% url 'index' %}">Main</a></li>
                 <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
                 <li><a href="{% url 'students:list_view' %}">Students</a></li>
-                <li><a href="{% url 'results' %}">Equation</a></li>
+                {#                <li><a href="{% url 'results' %}">Equation</a></li>#}
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -56,7 +56,6 @@
     <div class="row">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-                <img src="../static/images/director.jpg" alt="image">
 
                 <div class="caption">
                     <h3 class="blue">Director</h3>
@@ -71,8 +70,6 @@
         </div>
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-                <img src="../static/images/manager.jpg" alt="image">
-
                 <div class="caption">
                     <h3 class="blue">Manager</h3>
                     <ul>
@@ -86,7 +83,6 @@
         </div>
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-                <img src="../static/images/founder.jpg" alt="image">
 
                 <div class="caption">
                     <h3 class="blue">Founder</h3>
