--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/logo.jpg" %}" alt="img"></a>
+            <a class="navbar-brand" href="{% url 'index' %}">Main</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
