--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -33,7 +33,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/logo.jpg" alt="img" %}"></a>
+            <a class="navbar-brand" href="{% url 'index' %}">Main</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -54,7 +54,6 @@
         <div class="col-lg-12">
             <div class="well student_detail">
                 <h2>{{ student.surname }} {{ student.name }}</h2>
-                <img src="{% static 'images/face.jpg' %}" alt="img">
 
                 <table class="table table-striped table-hover">
                     <tbody>
