--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -4,7 +4,7 @@
 
 {% block branding %}
 <h1 id="site-name"><a href="{% url 'admin:index' %}">
-Polls Administrator</a></h1>
+PyBursa Administration</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
