--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -42,7 +42,7 @@
                 <li><a href="{% url 'index' %}">Main</a></li>
                 <li><a href="{% url 'contact' %}">Contacts</a></li>
                 <li class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
-                <li><a href="{% url 'results' %}">Equation</a></li>
+                {#                <li><a href="{% url 'results' %}">Equation</a></li>#}
             </ul>
         </div>
         <!-- /.navbar-collapse -->
