51 yet  another attempt

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
+          <a href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -52,9 +52,7 @@
     </nav>
     <!-- Begin page content -->
     <div class="container">
-      <div class="page-header">
         <h1>Технополис</h1>
-      </div>
       <p class="text-justify">Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
         Широкий спектр тем — от базовых, таких как алгоритмы и структуры данных, до тонкостей разработки приложений для мобильных платформ.
       Такие проекты, как Technopolis, важны и для рынка в целом, и в первую очередь — для самих студентов. У молодых специалистов должна быть возможность общаться с экспертами отрасли, пробовать свои силы в реальных проектах, иметь перед глазами вдохновляющие примеры. Мы стремимся создавать площадки для этого: проводим конференции для it-разработчиков, организуем крупнейшую в стране олимпиаду для программистов Technopolis Cup и другие международные чемпионаты.</p>
@@ -65,8 +63,8 @@
         <table class="table table-bordered table-condensed">
           <thead>
             <tr>
-              <th class="text-center">Курс</th>
-              <th class="text-center">Описание</th>
+              <th>Курс</th>
+              <th>Описание</th>
             </tr>
           </thead>
           <tbody>
