--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -40,14 +40,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
+        <a href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="{% url 'index' %}">Главная</a></li>
           <li><a href="{% url 'contact' %}">Контакты</a></li>
           <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Студенты</a></li>
-          <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -58,13 +57,13 @@
     <div class="page-header">
       <h1>{{ course.name }}</h1>
     </div>
-    <p class="text-justify">{{ course.description}}</p>
+    <p class="text-justify">{{ course.description }}</p>
     <br>
     <h2>План курса</h2>
     <div class="table-responsive">
        <table class="table table-bordered table-condensed">
     <thead>
-        <tr>
+      <tr>
           <th class="text-center wide5">#</th>
           <th class="text-center wide28">Тема</th>
           <th class="text-center">Описание</th>
