--- a/templates/contact.html
+++ b/templates/contact.html
@@ -35,7 +35,7 @@
             <a href="{% url 'contact' %}">Contacts</a>
           </li>
           <li>
-            <a href="{% url 'student_list' %}">Students</a>
+            <a href="{% url 'students:list_view' %}">Students</a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
