--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,5 +1,5 @@
-{% load staticfiles %}
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
@@ -40,7 +40,7 @@
             <a href="{% url 'contact' %}">Contacts</a>
           </li>
           <li>
-            <a href="{% url 'students:list_view' %}">Students</a>
+            <a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a>
           </li>
         </ul>
       </div>
@@ -49,30 +49,28 @@
   <div class="container theme-showcase" role="main">
     <div class="container">
       <div class="jumbotron">
-        <h2 class="course">ItBursa</h2>
-        <p>Курсы ItBursa начали работу в 2014 году. Мы специализируемся на «модных» языках программирования. Принципиальное наше отличие от других курсов –
-        максимум практики и жесткая система обязательных домашних заданий. Преподаватели – опытные практикующие разработчики, они помогают участникам в ходе
-        курсов создать реальные проекты и получить практические навыки, применимые к работе. Домашние задания на наших курсах обязательны и их невыполнение
-        приводит к исключению с курсов. Таким образом, мы готовим не просто «слушателей» курсов, а настоящих специалистов, способных создавать пусть простые,
-        но рабочие проекты.</p>
+        <h2 class="course">{{ course.name }}</h2>
+        <p>{{ course.description }}</p>
 
-        <h2 class="course">Наши курсы:</h2>
+        <h2 class="course">План курса</h2>
         <div class="container">
           <div class="row">
             <div class="col-md-12">
               <table class="table">
                 <thead>
                   <tr>
-                    <th class="panel-heading">Курс</th>
+                    <th class="panel-heading">#</th>
+                    <th class="panel-heading">Тема</th>
                     <th class="panel-heading">Описание</th>
                   </tr>
                 </thead>
                 <tbody>
-                  {% for i in course %}
-                  <tr>
-                    <td><a href="{% url 'courses:detail' i.id %}">{{ i }}</a></td>
-                    <td>{{ i.short_description }}</td>
-                  </tr>
+                  {% for i in course.lesson_set.all %}
+                    <tr>
+                      <td>{{ i.order }}</td>
+                      <td>{{ i.subject }}</td>
+                      <td>{{ i.description}}</td>
+                    </tr>
                   {% endfor %}
                 </tbody>
               </table>
