--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -33,7 +33,7 @@
             <a href="{% url 'contact' %}">Contacts</a>
           </li>
           <li class="active">
-            <a href="{% url 'student_list' %}">Students</a>
+            <a href="{% url 'students:list_view' %}">Students</a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
