--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,18 +1,19 @@
-{% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <title>PyBursa Main</title>
+</head>
+<body>
+  {% load staticfiles %}
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta content="" name="description">
   <meta content="" name="author">
-
-  <title>PyBursa Main</title>
-
   <link href="{% static 'bootstrap/css/style.css' %}" rel="stylesheet"><!-- Bootstrap -->
-  <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -20,9 +21,6 @@
   <![endif]-->
   <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
   <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-</head>
-<body role="document">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -49,31 +47,39 @@
   <div class="container theme-showcase" role="main">
     <div class="container">
       <div class="jumbotron">
-        <h2 class="course">ItBursa</h2>
-        <p>Курсы ItBursa начали работу в 2014 году. Мы специализируемся на «модных» языках программирования. Принципиальное наше отличие от других курсов –
-        максимум практики и жесткая система обязательных домашних заданий. Преподаватели – опытные практикующие разработчики, они помогают участникам в ходе
-        курсов создать реальные проекты и получить практические навыки, применимые к работе. Домашние задания на наших курсах обязательны и их невыполнение
-        приводит к исключению с курсов. Таким образом, мы готовим не просто «слушателей» курсов, а настоящих специалистов, способных создавать пусть простые,
-        но рабочие проекты.</p>
-
-        <h2 class="course">Наши курсы:</h2>
+        <h2 class="course">{{ student.surname }} {{ student.name }}</h2>
         <div class="container">
           <div class="row">
             <div class="col-md-12">
               <table class="table">
-                <thead>
-                  <tr>
-                    <th class="panel-heading">Курс</th>
-                    <th class="panel-heading">Описание</th>
-                  </tr>
-                </thead>
                 <tbody>
-                  {% for i in course %}
                   <tr>
-                    <td><a href="{% url 'courses:detail' i.id %}">{{ i }}</a></td>
-                    <td>{{ i.short_description }}</td>
+                    <td>дата рождения</td>
+                    <td>{{ student.date_of_birth }}</td>
                   </tr>
-                  {% endfor %}
+                  <tr>
+                    <td>адрес</td>
+                    <td>{{ student.address }}</td>
+                  </tr>
+                  <tr>
+                    <td>почта</td>
+                    <td>{{ student.email }}</td>
+                  </tr>
+                  <tr>
+                    <td>логин skype</td>
+                    <td>{{ student.skype }}</td>
+                  </tr>
+                  <tr>
+                    <td>телефон</td>
+                    <td>{{ student.phone }}</td>
+                  </tr>
+                  <tr>
+                    <td>курсы</td>
+                    <td>
+                      {% for k in student.courses.all %}<a href="{% url 'courses:detail' k.id %}">{{ k.name }}</a><br>
+                      {% endfor %}
+                    </td>
+                  </tr>
                 </tbody>
               </table>
             </div>
@@ -84,10 +90,10 @@
         <p>&copy; PyBursa, 2015</p>
       </footer>
     </div>
-
   </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
   </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
+
   <script src="{% static 'bootstrap/js/bootstrap.js' %}">
   </script>
 </body>
